--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "react-native-store-rating",
+	"name": "@sampension/react-native-store-rating",
 	"version": "1.0.1",
 	"description": "React Native store rating like Airbnb",
 	"scripts": {
@@ -10,12 +10,15 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/pankod/react-native-store-rating"
+		"url": "https://github.com/sampension/react-native-store-rating"
+	},
+	"publishConfig": {
+		"registry":"https://npm.pkg.github.com/"
 	},
 	"bugs": {
-		"url": "https://github.com/pankod/react-native-store-rating/issues"
+		"url": "https://github.com/sampension/react-native-store-rating/issues"
 	},
-	"homepage": "https://github.com/pankod/react-native-store-rating",
+	"homepage": "https://github.com/sampension/react-native-store-rating",
 	"files": [
 		"dist"
 	],
